# goit-web-hw-09

./: README.md  pyproject.toml
quotes_scraper/: authors.json  load_data.py  main.py  models.py
quotes_scraper/quotes_scraper/: settings.py
quotes_scraper/quotes_scraper/spiders/: quotes.py
